# pyswaggen

./: build.sh  pyproject.toml
docs/: definitions.md
pyswaggen/parser/: om.py  parse.py
tests/parser/: test_schema_parse.py
